<?xml version="1.0" encoding="utf-8"?>
<resources>
   <string name="app_name">Address Book</string>
   <string name="button_save_contact">Save Contact</string>
   <string name="button_scan">Scan for compatable devices</string>
   <string name="menuitem_add_contact">Add Contact</string>
   <string name="menuitem_edit_contact">Edit Contact</string>
   <string name="menuitem_delete_contact">Delete Contact</string>
   <string name="menuitem_transfer_contact">Transfer Contact</string>
   <string name="address">Address</string>
   <string name="hint_name">Name</string>
   <string name="hint_email">E-Mail</string>
   <string name="hint_phone">Phone</string>
   <string name="hint_street">Street</string>
   <string name="hint_city">City/State/Zip</string>
   <string name="label_name">Name:</string>
   <string name="label_email">E-Mail:</string>
   <string name="label_phone">Phone:</string>
   <string name="label_street">Street:</string>
   <string name="label_city">City/State/Zip:</string>
   <string name="confirmTitle">Are You Sure?</string>
   <string name="confirmMessage">
      This will permanently delete the contact</string>
   <string name="errorButton">OK</string>
   <string name="errorTitle">Contact Name is Required</string>
   <string name="errorMessage">You must enter a contact name</string>
   <string name="button_cancel">Cancel</string>
   <string name="button_delete">Delete</string>
   <string name="title_other_devices">Detected Devices</string>
   <string name="waiting_for_contact">Waiting for contact to be sent</string>
   <string name="sending_contact">Sending contact</string>
   <string name="contact_received">Contact Received</string>
   <string name="contact_not_received">An error occurred while receiving the contact</string>
   <string name="connection_error">Unable to connect</string>
   <string name="choose_device">Choose a device</string>
   <string name="no_devices">No devices found</string>
   <string name="contact_sent">Contact sent</string>
   <string name="no_bluetooth">Bluetooth is not enabled</string>
   <string name="bluetooth_enabled">Bluetooth enabled</string>
   <string name="no_discoverability">Cannot receive contact. Discoverability disallowed.</string>
   <string name="transfer_failed">Contact transfer failed</string>
   <string name="menuitem_receive_contact">Receive Contact</string>
</resources>
